--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-/*
+:root {
+  --required: #ff6500;
+}
 
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
+.requiredInputHeader:after {
+  content: ' *';
+  color: var(--required);
+}
 
-If your plugin does not need CSS, delete this file.
-
-*/
-.opn_error {
-  background: red !important;
+.requiredInput{
+  border-color: var(--required) !important;
+  border-width: revert !important;
 }
