Move styles to css

--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,19 @@
   border-color: var(--required) !important;
   border-width: revert !important;
 }
+
+.text-input {
+  width: 100%;
+}
+
+.button-bar {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  margin-top: 1rem;
+  gap: 0.5rem;
+}
+
+.ok-button {
+  margin-right: 0;
+}
